# grouper

./: .env.example  .gitignore  Dockerfile  README.md  TODO.md  db.sqlite3  docker-compose.yml  entrypoint.sh  fly.toml  implementation_report_and_user_manual.odt  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
chat/: consumers.py  models.py  routing.py  urls.py  views.py
chat/migrations/: 0002_chatroom_chat_type.py  0003_chatroom_image.py
chat/templates/: chat.html  chat_home.html
core/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py  0003_add_unaccent.py  0005_auto_20251228_1102.py  0007_alter_post_user_friendrequest.py  0008_post_interests.py
core/templates/: contacts.html  edit_profile.html  friend_requests.html  index.html  profile.html  search_post.html  search_users.html  secret.html
grouper/: asgi.py  context_processors.py  settings.py  urls.py
notifications/: apps.py  consumers.py  context_processors.py  models.py  routing.py  signals.py  urls.py  views.py
notifications/migrations/: 0001_initial.py  0002_remove_notification_is_active.py
notifications/templates/: notification.html  notification_oob.html
src/: entrypoint.sh  package-lock.json  package.json
src/chat/: admin.py  consumers.py  forms.py  models.py  routing.py  signals.py  views.py
src/core/: models.py  signals.py  views.py
src/grouper/: asgi.py  settings.py  urls.py  wsgi.py
templates/: master.html  master_auth.html  master_w_sidebar.html  navbar.html
users/: forms.py  models.py  views.py
(+91 files in other folders)
